Close jobs residual on provider.
Move inline jobs, NPA/retained-earning jobs, and COB/progressive/WC filters into jobs-impl via Spring qualifiers. Relocate LoanCOBEnabledCondition to cob-impl and BodyCachingHttpServletRequestWrapper to core.